--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .config/nvim/plugin/packer_compiled.lua
+.emacs.d/auto-save-list/
+.emacs.d/eln-cache/
+.emacs.d/elpa/
+.emacs.d/eshell/
+.emacs.d/transient/
+*~
